# inline-java

./: .gitignore  BUILD.bazel  DESIGN.md  WORKSPACE  env.sh  inline-java.cabal  stack-linear.sh  stack-linear.yaml
.circleci/: config.yml
docker-linear-types/: Dockerfile  enter_env.sh  env.sh
jni/: BUILD.bazel  jni.cabal
jni/src/Data/: Singletons.hs
jni/src/Foreign/JNI/: Linear.hs  Types.hs
jni/src/Foreign/JNI/Linear/: TH.hs
jni/src/Foreign/JNI/Types/: Linear.hs
jni/src/Linear/: Extras.hs
jni/src/Unsafe/Linear/: Extras.hs
jni/src/common/Foreign/JNI/: Types.hs
jvm/: BUILD.bazel  jvm.cabal
jvm/src/Language/: Java.hs
jvm/src/Language/Java/: Linear.hs
src/Language/Java/: Inline.hs
src/Language/Java/Inline/: Linear.hs  Magic.hsc  Plugin.hs  QQMarker.hs
src/Language/Java/Inline/QQMarker/: Linear.hs
src/linear/Language/Java/Inline/Plugin/: QQMarker.hs
src/nonlinear/Language/Java/Inline/Plugin/: QQMarker.hs
tests/: Main.hs
tests/linear/: LinearSpec.hs
tests/linear/Language/Java/Inline/: LinearSpec.hs
tests/nonlinear/: LinearSpec.hs
