name:                inline-java
version:             0.8.4
synopsis:            Java interop via inline Java code in Haskell modules.
description:         Please see README.md.
homepage:            http://github.com/tweag/inline-java#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          m@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  CHANGELOG.md
  README.md
extra-tmp-files:
  src/Foreign/JNI.c

source-repository head
  type:     git
  location: https://github.com/tweag/inline-java

library
  hs-source-dirs: src
  c-sources: cbits/bctable.c
  cc-options: -std=c99 -Wall -Werror
  include-dirs: cbits/
  includes: bctable.h
  install-includes: bctable.h
  exposed-modules:
    Language.Java.Inline
    Language.Java.Inline.Cabal
    Language.Java.Inline.Plugin
  if impl(ghc >= 8.9)
    hs-source-dirs: src/linear
    exposed-modules:
      Language.Java.Inline.Linear
      Language.Java.Inline.QQMarker.Linear
  else
    hs-source-dirs: src/nonlinear
  other-modules:
    GhcPlugins.Extras
    Language.Java.Inline.Magic
    Language.Java.Inline.QQMarker
    Language.Java.Inline.Plugin.QQMarker
  build-depends:
    -- Can't build at all with GHC < 8.0.2.
    base >4.9.0.0 && <5,
    bytestring >=0.10,
    Cabal >=1.24.2,
    directory >=1.2,
    filepath >=1,
    ghc >=8.4 && <8.7,
    jni >=0.4 && <0.7,
    jvm >=0.4 && <0.5,
    language-java >=0.2,
    linear-base,
    mtl >=2.2.1,
    process >=1.2,
    text >=1.2,
    template-haskell >=2.10,
    temporary >=1.2
  default-language: Haskell2010

test-suite spec
  type:
    exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  other-modules:
    LinearSpec
    Spec
    Language.Java.InlineSpec

  if impl(ghc >= 8.9)
    other-modules:
      Language.Java.Inline.LinearSpec
    hs-source-dirs: tests/linear
  else
    hs-source-dirs: tests/nonlinear
  build-depends:
    base,
    jni,
    jvm,
    hspec,
    inline-java,
    linear-base,
    text
  default-language: Haskell2010
  ghc-options: -fplugin=Language.Java.Inline.Plugin -DHSPEC_DISCOVER=hspec-discover
